# xTraderz

./: Cargo.toml  README.md  build.rs
docs/: api.md  api_doc.md  architecture.md  websocket.md
examples/: order_simulation.rs  simple_client.rs
src/: handlers.rs  lib.rs  main.rs  matching_engine.rs  models.rs  order_manager.rs  routes.rs  sequencer.rs
src/market_data_publisher/: candlestick.rs  mod.rs  models.rs  publisher.rs
src/relay/: client_handler.rs  mod.rs  server.rs
src/trading_engine/: mod.rs  order.rs  order_book.rs  trading.rs
src/util/: mod.rs  serializer.rs
src/websocket/: execution_push.rs  mod.rs  orderbook_relay.rs
tests/: interagration_test.rs  mdp_test.rs  relay_test.rs  websocket_test.rs
