[package]
name = "xTraderz"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "고성능 주문 매칭 엔진"
repository = "https://github.com/yourusername/order-matching-engine"
license = "MIT"

[dependencies]
# 기본 의존성
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }

# 웹소켓 관련 의존성
futures = "0.3"
tokio-tungstenite = "0.18"  # WebSocket 클라이언트 라이브러리
futures-util = "0.3"
tokio-stream = "0.1"

# 유틸리티 및 도구
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"  # 오류 처리 단순화
dotenv = "0.15"  # 환경 변수 로드

# 테스트 및 벤치마킹
criterion = { version = "0.4", optional = true }

# 예제 및 테스트용 의존성
[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
url = "2.3"
rand = "0.8"  # 무작위 주문 생성용

[features]
default = []
benchmarking = ["criterion"]

[[example]]
name = "simple_client"
path = "examples/simple_client.rs"

[[example]]
name = "order_simulation"
path = "examples/order_simulation.rs"

[profile.release]
opt-level = 3       # 최적화 수준
lto = true          # Link Time Optimization
codegen-units = 1   # 더 느린 컴파일 시간, 더 나은 최적화
panic = "abort"     # 패닉 시 중단 (언와인딩 없음)
debug = false       # 디버그 심볼 제외


[build-dependencies]
chrono = "0.4"
